added more content

--- a/apps/formuladb-internal/formuladb.io/footer.html
+++ b/apps/formuladb-internal/formuladb.io/footer.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 
 <head>
     <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-131901388-1"></script>
@@ -7,7 +6,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
+        
         gtag('config', 'UA-131901388-1');
     </script>
     <script>
@@ -31,15 +30,16 @@
     <link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
+
 </head>
 
 <body data-frmdb-tenant="formuladb-internal" data-frmdb-app="formuladb.io" class="frmdb-editor-on">
-
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
         <div class="row">
-            <div class="col-12 col-md">
+            <div class="col-12 col-md mx-4">
                 <div class="copyright">
                     © 2019 FormulaDB
+
 
 
 
@@ -49,11 +49,14 @@
 
 
 
+
                         <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>,
 
 
 
+
                         <a href="https://themewagon.com" target="_blank">ThemeWagon</a>,
+
 
 
 
@@ -62,7 +65,9 @@
 
 
 
+
                         <a href="https://startbootstrap.com" target="_blank">Start Bootstrap</a>.
+
 
 
 
@@ -70,6 +75,7 @@
                     </small>
                 </div>
                 Powered by:
+
 
 
                 <br>
@@ -136,6 +142,7 @@
             </div>
         </div>
     </footer>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
 
 </html>
