--- a/apps/formuladb-internal/formuladb.io/low-code.html
+++ b/apps/formuladb-internal/formuladb.io/low-code.html
@@ -6,7 +6,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
+        
         gtag('config', 'UA-131901388-1');
     </script>
     <script>
@@ -29,6 +29,9 @@
     <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
     <link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+
+
+
 
 </head>
 
@@ -57,66 +60,64 @@
     <header class="header-global">
         <frmdb-fragment name="nav.html"></frmdb-fragment>
     </header>
-    <section class="section pb-0">
-        <div class="container">
-            <h1 class="display-3 text-white">Low Code Platform</h1>
-        </div>
-    </section>
-    <section class="section">
-        <div class="container-fluid" style="position: relative; z-index: 2">
+    <section class="section pt-0" style="margin-top: 28vh">
+        <div class="container" style="position: relative; z-index: 2">
             <div class="card card-profile shadow mx-3 mx-md-5">
                 <div class="card-body">
-
+                    <h1>Low Code</h1>
+                    <h5 class="card-title">For Medium and Large Businesses</h5>
+                    <p>Larger businesses have more complex requirements and usually need integrations with various other systems. In many cases team members with formal IT training are needed.</p>
+                    <h5 class="card-title">For Web Designers</h5>
+                    <p>Coming soon...</p>
                     <h5 class="card-title">For Developers</h5>
-                    <p>Over the years there were many visual tools that most developers don't enjoy<sup data-toggle="tooltip" data-placement="top"
-                            title="TODO add references">*</sup>, because even if you can get a PoC up an running fast, tweaking, refactoring and maintaining the system in the long was a pain.</p>
+                    <p>Over the years there were many visual tools that most developers don't enjoy
+                        <sup data-toggle="tooltip" data-placement="top" title="" data-original-title="TODO add references">*</sup>, because even if you can get a PoC up an running fast, tweaking, refactoring and maintaining the system in the long was a pain.
+                    </p>
                     <p>But the tools we love and use everyday as productive developers are also visual tools with tons of buttons, menus, options: vscode, Eclipse,
                         IntelliJ/Webstorm, github/gitlab, JIRA, etc.</p>
                     <p>Why don't we developers hate these tools? Because IDEs just help us navigate and manage the existing layers in our technology stack, they don't try to create
                         a new abstraction layer over the many layers we already have.</p>
-                    <p>FormulaDB Low Code Platform tries to offer the same non-intrusive, lovable, helpful IDE-like experience for developers while also providing a simpler &quot;No Code&quot;
+                    <p>FormulaDB Low Code Platform tries to offer the same non-intrusive, lovable, helpful IDE-like experience for developers while also providing a simpler "No Code"
                         experience for non-developers.</p>
-                    <p>The &quot;No Code&quot; mode is less powerful, but its powerful enough so that in most cases business people can satisfy their own requirements using a
+                    <p>The "No Code" mode is less powerful, but its powerful enough so that in most cases business people can satisfy their own requirements using a
                         higher level language: Tables, Formulas (computed columns, validations, rules), Pages. From this perspective FormulaDB is a also a good communication tool
                         making business people and developers speak a common language which is powerful enough to implement a virtually unlimited number of use cases.</p>
                     <p>Developers will be the maintainers of the platform and formuladb language: tweak theme (CSS/HTML/JS), implement new components and themes to be used in
                         Pages, implement custom functions, provide support with Tables/Formulas/Pages, monitor the system for errors and/or performance issues.</p>
                     <p>Developers can also implement any custom integrations or advanced custom functionality using the Function as a Service (FaaS) paradigm and/or packaging any custom or legacy application as docker containers and deploy them inside FormulaDB platform.</p>
+                    <h5 class="card-title">For DevOps Engineers</h5>
+                    <p>Coming soon...</p>
+                    <h5 class="card-title">For System Administrators</h5>
+                    <p>Coming soon...</p>
+                    <h5 class="card-title">For IT Managers</h5>
+                    <p>Coming soon...</p>
                 </div>
             </div>
         </div>
     </section>
     <frmdb-fragment name="footer.html"></frmdb-fragment>
-
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI="
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI=" crossorigin="anonymous"></script>
     <script src="assets/js/script.js"></script>
     <script>
         function scrollToAnchor(aid) {
             var aTag = $("a[name='" + aid + "']");
             $('html,body').animate({ scrollTop: aTag.offset().top - 20 }, 'slow');
         }
-
+        
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
     </script>
     <script src="/formuladb/frmdb-fe.js"></script>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html"
-        style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html"
-        style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html"
-        style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html"
-        style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
-    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html"
-        style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
 
 </html>
