--- a/apps/formuladb-internal/formuladb.io/nav.html
+++ b/apps/formuladb-internal/formuladb.io/nav.html
@@ -29,10 +29,20 @@
     <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
     <link type="text/css" href="assets/css/argon.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+
+
+
+
+
+
+
+
+
+
 </head>
 
-<body style="width: 100vw; height: 100vh; background: linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%);">
-    <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom sticky-top">
+<body style="width: 100vw; height: 100vh; background: linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%);" class="frmdb-editor-on">
+    <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
         <div class="container">
             <a class="navbar-brand mr-lg-5" href="index.html">
                 <img src="assets/logo.png" style="height: 40px">
@@ -59,7 +69,6 @@
                 <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
                     <li class="nav-item dropdown">
                         <a href="no-code.html" class="nav-link" data-toggle="dropdown" role="button">
-                            <i class="ni ni-ui-04 d-lg-none"></i>
                             <span class="nav-link-inner--text">No Code</span>
                         </a>
                         <div class="dropdown-menu">
@@ -69,17 +78,16 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link" data-toggle="dropdown" role="button">
-                            <i class="ni ni-collection d-lg-none"></i>
                             <span class="nav-link-inner--text">Low Code</span>
                         </a>
                         <div class="dropdown-menu">
                             <a href="no-code-vs-low-code.html" class="dropdown-item">No-Code vs Low-Code</a>
-                            <a href="low-code-for-medium-and-large-businesses.html" class="dropdown-item">Low-Code for Medium and Large Businesses</a>
-                            <a href="low-code-for-web-designers.html" class="dropdown-item">Low-Code for Web Designers</a>
-                            <a href="low-code-for-developers.html" class="dropdown-item">Low-Code for Developers</a>
-                            <a href="low-code-for-devops-engineers.html" class="dropdown-item">Low-Code for DevOps Engineers</a>
-                            <a href="low-code-for-it-system-administrators.html" class="dropdown-item">Low-Code for IT/System Administrators</a>
-                            <a href="low-code-for-it-managers.html" class="dropdown-item">Low-Code for IT Managers</a>
+                            <a href="low-code.html#for-medium-and-large-businesses" class="dropdown-item">Low-Code for Medium and Large Businesses</a>
+                            <a href="low-code.html#for-web-designers" class="dropdown-item">Low-Code for Web Designers</a>
+                            <a href="low-code.html#for-developers" class="dropdown-item">Low-Code for Developers</a>
+                            <a href="low-code.html#for-devops-engineers" class="dropdown-item">Low-Code for DevOps Engineers</a>
+                            <a href="low-code.html#for-it-system-administrators" class="dropdown-item">Low-Code for IT/System Administrators</a>
+                            <a href="low-code.html#for-it-managers" class="dropdown-item">Low-Code for IT Managers</a>
                         </div>
                     </li>
                 </ul>
@@ -91,13 +99,26 @@
                         <a href="community.html" class="nav-link">Community</a>
                     </li>
                     <li class="nav-item dropdown">
+                        <a href="about.html" class="nav-link" data-toggle="dropdown" role="button">
+                            <span class="nav-link-inner--text">About</span>
+                        </a>
+                        <div class="dropdown-menu">
+                            <a href="about.html#mission" class="dropdown-item">Mission</a>
+                            <a href="about.html#timeline" class="dropdown-item">Timeline</a>
+                            <a href="about.html#credits" class="dropdown-item">Credits and Inspiration</a>
+                            <a href="about.html#team" class="dropdown-item">Team</a>
+                            <a href="about.html#testimonials" class="dropdown-item">Testimonials</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
                         <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
+    <iframe name="_hjRemoteVarsFrame" title="_hjRemoteVarsFrame" id="_hjRemoteVarsFrame" src="https://vars.hotjar.com/box-90f3a29ef7448451db5af955688970d7.html" style="display: none !important; width: 1px !important; height: 1px !important; opacity: 0 !important; pointer-events: none !important;"></iframe>
 </body>
 
 </html>
