added team to about.html

--- a/apps/formuladb-internal/formuladb.io/low-code.html
+++ b/apps/formuladb-internal/formuladb.io/low-code.html
@@ -65,11 +65,11 @@
             <div class="card card-profile shadow mx-3 mx-md-5">
                 <div class="card-body">
                     <h1>Low Code</h1>
-                    <h5 class="card-title">For Medium and Large Businesses</h5>
+                    <h3>For Medium and Large Businesses</h3>
                     <p>Larger businesses have more complex requirements and usually need integrations with various other systems. In many cases team members with formal IT training are needed.</p>
-                    <h5 class="card-title">For Web Designers</h5>
+                    <h3>For Web Designers</h3>
                     <p>Coming soon...</p>
-                    <h5 class="card-title">For Developers</h5>
+                    <h3>For Developers</h3>
                     <p>Over the years there were many visual tools that most developers don't enjoy
                         <sup data-toggle="tooltip" data-placement="top" title="" data-original-title="TODO add references">*</sup>, because even if you can get a PoC up an running fast, tweaking, refactoring and maintaining the system in the long was a pain.
                     </p>
@@ -85,11 +85,11 @@
                     <p>Developers will be the maintainers of the platform and formuladb language: tweak theme (CSS/HTML/JS), implement new components and themes to be used in
                         Pages, implement custom functions, provide support with Tables/Formulas/Pages, monitor the system for errors and/or performance issues.</p>
                     <p>Developers can also implement any custom integrations or advanced custom functionality using the Function as a Service (FaaS) paradigm and/or packaging any custom or legacy application as docker containers and deploy them inside FormulaDB platform.</p>
-                    <h5 class="card-title">For DevOps Engineers</h5>
+                    <h3>For DevOps Engineers</h3>
                     <p>Coming soon...</p>
-                    <h5 class="card-title">For System Administrators</h5>
+                    <h3>For System Administrators</h3>
                     <p>Coming soon...</p>
-                    <h5 class="card-title">For IT Managers</h5>
+                    <h3>For IT Managers</h3>
                     <p>Coming soon...</p>
                 </div>
             </div>
