--- a/apps/formuladb-internal/formuladb.io/no-code.html
+++ b/apps/formuladb-internal/formuladb.io/no-code.html
@@ -63,7 +63,7 @@
             <div class="card card-profile shadow mx-3 mx-md-5">
                 <div class="card-body">
                     <h1>Low Code</h1>
-                    <h5 class="card-title">For Small and Micro Businesses</h5>
+                    <h3>For Small and Micro Businesses</h3>
                     <h5>
                         <p>Micro and even Small businesses usually don't have dedicated team members with formal IT training, unless of course the business operates in the IT industry. FormulaDB high level language of Tables, Formulas and Pages empower non-developers to setup websites and web applications for managing the entire business.</p>
                     </h5>
