--- a/apps/formuladb-internal/formuladb.io/no-code-vs-low-code.html
+++ b/apps/formuladb-internal/formuladb.io/no-code-vs-low-code.html
@@ -59,7 +59,7 @@
         </div>
     </div>
     <header class="header-global">
-        <frmdb-fragment name="nav.html"></frmdb-fragment>
+        <frmdb-fragment name="_nav.html"></frmdb-fragment>
     </header>
     <section class="section mt-5">
         <div class="container" style="position: relative; z-index: 2">
@@ -72,7 +72,7 @@
             </div>
         </div>
     </section>
-    <frmdb-fragment name="footer.html"></frmdb-fragment>
+    <frmdb-fragment name="_footer.html"></frmdb-fragment>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
